--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "env-variables",
   "private": true,
+  "homepage": "https://maryamer.github.io/react-inventory-app.github.io",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
