--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "env-variables",
   "private": true,
-  "homepage": "https://maryamer.github.io/react-inventory-app",
+  "homepage": "https://maryamer.github.io/react-inventory-app/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -10,7 +10,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-   "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
